<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp"
    android:orientation="vertical">

    <!-- Name field -->
    <EditText
        android:id="@+id/edit_book_name"
        android:hint="@string/hint_book_name"
        android:inputType="textCapWords"
        style="@style/EditorFieldStyle" />

    <!-- Price field -->
    <EditText
        android:id="@+id/edit_book_price"
        android:hint="@string/hint_book_price"
        android:inputType="number"
        style="@style/EditorFieldStyle" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/decreaseQuantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="-"
            android:layout_marginRight="5dp"/>



        <EditText
            android:id="@+id/edit_book_quantity"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:gravity="center"
            android:inputType="number"
            android:maxLength="4" />


        <Button
            android:id="@+id/increaseQuantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="+"
            android:layout_marginLeft="5dp"/>


    </LinearLayout>


    <!-- Supplier field -->
    <EditText
        android:id="@+id/edit_book_supplier"
        android:hint="@string/unit_book_supplier"
        android:inputType="textCapWords"
        style="@style/EditorFieldStyle" />



    <!-- Phone number field -->
    <EditText
        android:id="@+id/edit_book_number"
        android:hint="@string/unit_supplier_number"
        android:inputType="textCapWords"
        style="@style/EditorFieldStyle" />

    <Button
        android:id="@+id/call_supplier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/call_supplier"
        android:onClick="dialNumber"/>


</LinearLayout>